# Disco-Game-Engine

./: .gitignore  CMakeLists.txt
include/Disco/: Color.hpp  Exceptions.hpp  Game.hpp  Window.hpp
include/Disco/DataStructures/: Observable.hpp  Observer.hpp
include/GameEngine/: Color.hpp  Exceptions.hpp  Game.hpp  Window.hpp
include/GameEngine/DataStructures/: Observable.hpp  Observer.hpp
src/: Game.cpp  Window.cpp  main.cpp
